--- a/package.json
+++ b/package.json
@@ -15,5 +15,13 @@
     "npm": "^6.4.1",
     "path": "^0.12.7",
     "sequelize": "^4.41.2"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/nicolep1056/Project-2.git"
+  },
+  "bugs": {
+    "url": "https://github.com/nicolep1056/Project-2/issues"
+  },
+  "homepage": "https://github.com/nicolep1056/Project-2#readme"
 }
