--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.16.4",
+    "moment": "^2.22.2",
     "mysql2": "^1.6.4",
     "npm": "^6.4.1",
     "path": "^0.12.7",
