add html files, buttons and updated api

--- a/package.json
+++ b/package.json
@@ -11,9 +11,18 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.16.4",
+    "moment": "^2.22.2",
     "mysql2": "^1.6.4",
     "npm": "^6.4.1",
     "path": "^0.12.7",
     "sequelize": "^4.41.2"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/nicolep1056/Project-2.git"
+  },
+  "bugs": {
+    "url": "https://github.com/nicolep1056/Project-2/issues"
+  },
+  "homepage": "https://github.com/nicolep1056/Project-2#readme"
 }
