--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.18.0",
     "express": "^4.16.4",
     "moment": "^2.22.2",
+    "mustache-express": "^1.2.8",
     "mysql": "^2.16.0",
     "mysql2": "^1.6.4",
     "npm": "^6.4.1",
